feat: DEPLOY MARKET DEVA MODE -DeepMarketScanner 10/10, Batch Optimization & Realism Logic